[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arn-v9"
version = "9.0.0"
description = "Brain-inspired persistent memory for AI agents. Runs locally, costs nothing, fits on a Raspberry Pi."
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Mohamed Mohamed"}
]
keywords = ["ai", "agents", "memory", "embeddings", "cognitive", "neuroscience", "openclaw", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/tuuhe99-del/arn-v9"
Issues = "https://github.com/tuuhe99-del/arn-v9/issues"

[project.scripts]
arn-cli = "arn_v9.scripts.arn_cli:main"

[tool.setuptools]
packages = ["arn_v9", "arn_v9.core", "arn_v9.storage", "arn_v9.api", "arn_v9.scripts", "arn_v9.tests", "arn_v9.benchmarks"]

[tool.setuptools.package-data]
arn_v9 = ["openclaw_skill/SKILL.md", "Dockerfile", "requirements.txt"]
