[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arn"
version = "1.4.0"
description = "Local semantic memory for AI agents: store facts, recall by meaning, persist across sessions."
readme = "README.md"
authors = [
    {name = "Mohamed Mohamed"}
]
keywords = ["ai", "agents", "memory", "embeddings", "semantic-search", "openclaw"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
arn = "arn.scripts.arn_cli:main"
arn-cli = "arn.scripts.arn_cli:main"

[tool.setuptools]
packages = ["arn", "arn.core", "arn.storage", "arn.api", "arn.scripts"]

[tool.setuptools.package-data]
arn = ["openclaw_skill/SKILL.md", "api/ui.html", "requirements.txt"]
